start fixing side nav title overflow

--- a/src/ui/side-nav/side-nav.module.scss
+++ b/src/ui/side-nav/side-nav.module.scss
@@ -95,8 +95,12 @@
         color: inherit;
         display: flex;
         width: 100%;
-        padding: 0.875rem 0 0.875rem 1.5rem;
+        text-overflow: ellipsis;
+        padding: 0.875rem 1rem 0.875rem 1.5rem;
         border-radius: 0 100px 100px 0;
+        max-width: 14.75rem;
+        overflow: hidden;
+        white-space: nowrap;
 
         &:hover{
             background-color: $lightPurple;
